# video-director

./: .gitignore  AGENTS.md  LICENSE  README.md  README_ZH.md  SKILL.md  install.md  pyproject.toml
docs/: 2026-05-20-copy-review-subtitle-plan.md  2026-05-21-agent-native-skill-package-plan.md  2026-05-21-agent-native-update-workflow-plan.md  2026-05-21-doubao-tts2-config-plan.md  2026-05-21-final-tail-migration-plan.md  2026-05-21-material-aware-planning-plan.md  2026-05-21-operation-confirmation-plan.md  2026-05-21-user-artifact-boundary-plan.md  ARCHITECTURE.md  CONTEST_READINESS_PLAN.md  DECISIONS.md  NORMALIZATION_PLAN.md
references/: config_contract.md  troubleshooting.md
runtime/: __init__.py  assets_manifest.py  cloud_production.py  config_prepare.py  copy_review.py  doctor.py  kernel.py  material_planning.py  models.py  operation_confirmation.py  production.py  remote_manifest.py  retrying.py  summarize.py  workflow.py
runtime/adapters/: __init__.py  base.py  jianying.py  planned.py  rendered_video.py
runtime/templates/: cloud.template.json  draft.template.json  jianying-draft.template.json  video.template.json
scripts/: doctor.ps1  doctor.sh  install.ps1  install.sh  run.ps1  run.sh  update.ps1  update.sh  video-director.cmd  video-director.sh  video_director.py
tests/: smoke.ps1  smoke.sh  test_jianying_dry_run.py  test_jianying_subtitles.py  test_material_selection.py  test_timeline_handoff.py
