[project]
name = "video-director"
version = "0.1.0"
description = "Local-first video director skill for coding agents"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10,<12",
]

[project.optional-dependencies]
jianying = [
    "pyJianYingDraft>=0.2.6,<0.3",
]
tos = [
    "tos>=2,<3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# This repository is distributed as an Agent Skill. The root project metadata is
# the dependency source; runtime code is loaded from ./runtime by the launchers.
py-modules = []

[tool.uv]
package = false
